--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -2,7 +2,7 @@
     <div class="container">
         <header class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
-                <a class="navabr-brand" href="{{pathFor 'postsList'}}">Microscope</a>
+                <a class="navabar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
             </div>
         </header>
         <div id="main">
