--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -1,8 +1,10 @@
 <template name="postsList">
     <div class="posts">
+        {{#if currentUser}}
         {{#each posts}}
          {{> postItem}}
         {{/each}}
+        {{/if}}
     </div>
    
 </template>
