--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,7 +1,7 @@
 <template name="header">
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <button tpe="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -20,3 +20,5 @@
         </div>
     </nav>
 </template>
+
+
