--- a/client/templates/notifications/notifications.html
+++ b/client/templates/notifications/notifications.html
@@ -1,7 +1,9 @@
 <template name="notifications">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         Notifications
+        {{#if notificationCount}}
             <span class="badge badge-inverse">{{notificationCount}}</span>
+        {{/if}}    
         <b class="caret"></b>
     </a>
     <ul class="notification dropdown-menu">
