--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -7,6 +7,10 @@
 
             {{#if nextPath}}
              <a class="load-more" href="{{nextPath}}">Load More</a>
+            {{else}}
+                {{#unless ready}}
+                    {{> spinner}}
+                {{/unless}}
             {{/if}}
         {{/if}}    
     </div>
