--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -7,19 +7,29 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
+            <a class="navbar-brand" href="{{pathFor 'home'}}">Microscope</a>
             
         </div>
         <div class="collapse navbar-collapse" id="navigation">
                 <ul class="nav navbar-nav">
-                      {{#if currentUser }}  
+                    
                         <li>
-                          <a href="{{pathFor 'postSubmit'}}">Submit Post</a>
+                             <a href="{{pathFor 'newPosts'}}">New Posts</a>
                         </li>
-                            <li class="dropdown">
-                                {{> notifications}}
-                            </li>
-                      {{/if}}
+
+                        <li>
+                             <a href="{{pathFor 'bestPosts'}}">Best Posts</a>
+                          </li>
+
+                          {{#if currentUser }}  
+                             <li>
+                                 <a href="{{pathFor 'postSubmit'}}">Submit Post</a>
+                             </li>
+
+                             <li class="dropdown">
+                                    {{> notifications}}
+                             </li>
+                           {{/if}}
                 </ul>
             <ul class="nav navbar-nav navbar-right">
                 {{> loginButtons}}
