--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -7,17 +7,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{pathFor 'home'}}">Microscope</a>
-            
+            <a class="navbar-brand" href="{{pathFor 'home'}}">Microscope</a>           
         </div>
         <div class="collapse navbar-collapse" id="navigation">
                 <ul class="nav navbar-nav">
                     
-                        <li>
+                        <li class="{{activeRouteClass 'home' 'newPosts'}}">
                              <a href="{{pathFor 'newPosts'}}">New Posts</a>
                         </li>
 
-                        <li>
+                        <li class="{{activeRouteClass 'bestPosts'}}">
                              <a href="{{pathFor 'bestPosts'}}">Best Posts</a>
                           </li>
 
